--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "reactdashboard",
   "version": "1.0.0",
   "description": "dashboard reactjs",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
